# ledr

./: .rustfmt.toml  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
doc/: ledr.1.scd  ledr.5.scd
src/: main.rs
src/config/: config_file.rs  mod.rs
src/gl/: declaration.rs  entry.rs  exchange_rates.rs  ledger.rs  mod.rs  observed_rate.rs  total.rs
src/import/: account_guesser.rs  http.rs  importer.rs  mod.rs
src/import/mercury/: core.rs  mod.rs  models.rs
src/investment/: action.rs  action_buffer.rs  commodity.rs  lot.rs  mod.rs  portfolio.rs  sale.rs
src/parsing/: filesystem.rs  mod.rs  parser.rs
src/reports/: ledger_reporter.rs  mod.rs  portfolio_reporter.rs  rate_reporter.rs  statement_reporter.rs  table.rs
src/util/: amount.rs  date.rs  graph.rs  mod.rs  quant.rs
tests/: integration_test.rs
tests/test_data/acctsummary/: 1_in.txt  1_out.txt  2_in.txt  2_out.txt
tests/test_data/bounded/: 1_in.txt  1_out.txt
tests/test_data/canon/: 1_in.txt  1_out.txt
tests/test_data/check/: 1_in.txt  1_out.txt
tests/test_data/clear/: 1_in.txt  1_out.txt
tests/test_data/collapse/: 1_in.txt  1_out.txt  2_in.txt  2_out.txt  3_in.txt  3_out.txt  4_in.txt  4_out.txt  5_in.txt  5_out.txt  6_in.txt  6_out.txt  7_in.txt  7_out.txt  8_in.txt  8_out.txt  9_in.txt  9_out.txt
tests/test_data/exchangerates/: 1_in.txt  1_out.txt
tests/test_data/failures/: 1_in.txt  2_in.txt  3_in.txt  4_in.txt  5_in.txt  6_in.txt  7_in.txt
tests/test_data/find/: 1_in.txt  1_out.txt
tests/test_data/incomestatement/: 1_in.txt  1_out.txt
(+61 files in other folders)
