# Copyright © 2024-2025 Adam Train <adam@trainrelay.net>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "ledr"
version = "0.7.21"
authors = ["Adam Train"]
edition = "2021"
description = "Plain text accounting tool"
readme = "README.md"
repository = "https://github.com/aetxyz/ledr"
license = "GPL-3"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
dirs = "5.0.1"
rand = "0.9.0-alpha.2"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
serde_json = "1.0.133"
